--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://AgustinBessone32.github.io/my-portfolio",
+  "homepage": "http://AgustinBessone32.github.io/portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
